# teamagent.services

./: .gitignore  pyproject.toml
.teamagent/: teamagent.json
backend/: main.py  requirements.txt
backend-v2/: .gitignore  main.py  requirements.txt
backend-v2/api/: service_conversations_api.py  service_info_api.py  workspace_conversations_api.py
backend-v2/config/: loader.py
backend-v2/repository/: conversation_repo.py  session_repo.py
backend-v2/service/: conversation_service.py
backend-v2/tests/: test_config_loader.py  test_conversation_repo.py  test_file_utils.py  test_service_conversations_api.py  test_service_info_api.py  test_session_repo.py  test_workspace_conversations_api.py
backend/api/: service_conversations_api.py  service_info_api.py  user_api.py  workspace_harness_api.py  workspace_members_api.py  workspace_providers_api.py  workspace_service_inbox_api.py  workspace_sessions_api.py  workspace_stats_api.py
backend/model/: do.py  dto.py
backend/repository/: db.py  (+10 more)
book/: README.md  chapter-01.md  chapter-02.md  chapter-03.md  chapter-04.md  chapter-05.md  chapter-06.md  chapter-07.md  chapter-08.md  chapter-09.md  chapter-10.md  chapter-11.md  chapter-12.md  前言.md  后记.md
book2/: 00-序.md  01-会议是bug.md  02-文档已死.md  03-你需要一个房间.md  04-透明不是监控.md  05-两扇门.md  06-团队即API.md  07-知识在对话中.md  08-人的不可替代性.md  09-螺丝钉的反叛.md  10-分形.md  11-跋.md  README.md
docs/: README.md  api-sessions.md  api-stats.md
frontend/: next.config.ts  package-lock.json
frontend2/: package.json
stories/: story1.md  story2.md  story3.md
teamagent/: __main__.py  app.py
(+124 files in other folders)
