[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teamagent"
version = "2.0.0"
description = "teamagent.services — config-driven AI Agent service framework"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
teamagent = "teamagent.__main__:main"

[tool.setuptools.packages.find]
include = ["teamagent*"]

[tool.pytest.ini_options]
testpaths = ["teamagent/tests"]
